<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_color_primary"
    tools:context=".activities.ForgotPasswordActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/custom_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/forgot_password"
        android:textColor="@color/custom_color_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/enter_your_email_address_we_ll_send_you_an_email_to_reset_your_password"
        android:textAlignment="center"
        android:textColor="@color/custom_color_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="15dp"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="15dp"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

</androidx.constraintlayout.widget.ConstraintLayout>